src/test/ui/consts/const-err-multi.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-err-multi.rs:1:19
   |
LL | pub const A: i8 = -i8::MIN;
   |                   ^^^^^^^^ attempt to negate `i8::MIN`, which would overflow

error[E0080]: evaluation of constant value failed
  --> $DIR/const-err-multi.rs:3:19
   |
LL | pub const B: i8 = A;
   |                   ^ referenced constant has errors

error[E0080]: evaluation of constant value failed
  --> $DIR/const-err-multi.rs:5:19
   |
LL | pub const C: u8 = A as u8;
   |                   ^ referenced constant has errors

error[E0080]: evaluation of constant value failed
  --> $DIR/const-err-multi.rs:7:24
   |
LL | pub const D: i8 = 50 - A;
   |                        ^ referenced constant has errors

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0080`.
